--- a/OilSardine_NOAA_MoES.Rmd
+++ b/OilSardine_NOAA_MoES.Rmd
@@ -3,9 +3,9 @@ title: Influence of temperature and upwelling intensity on Indian oil sardine (*
 author: ''
 date: '`r format(Sys.time(), "%d %B, %Y")`'
 output:
-  pdf_document: default
-  md_document: default
   word_document: default
+  md_document: default
+  pdf_document: default
   html_document: default
 header-includes:
 - \usepackage[labelformat=empty]{caption}
@@ -82,7 +82,7 @@ Quarterly fish landing data have been collected by the Central Marine Fisheries 
 
 We analysed monthly composites of the following environmental data derived from satellite data: sea surface temperature (SST), chlorophyll-a (CHL), upwelling (UPW), the Oceanic Niño Index (ONI) and precipitation. The monthly means  of the covariate time series are shown in Figure `r ref("fig:COVts")`.
 
-For sea surface temperature, we used Advanced Very-High Resolution Radiometer (AVHRR) data, which provides accurate nearshore SST values. Although the ICOADS product provides SST values for earlier years, ICOADS does not provide accurate nearshore temperatures. For 1981 to 2003, we used the Pathfinder Version 5.2 product on a 0.0417 degree grid. These data were developed by the Group for High Resoluation Sea Surface Temperature (GHRSST) and served by the US National Oceanographic Data Center.  For 2004 to 2016, we used the NOAA CoastWatch SST products derived from NOAA's Polar Operational Environmental Satellites (POES). 
+For sea surface temperature, we used Advanced Very-High Resolution Radiometer (AVHRR) data, which provides accurate nearshore SST values. Although the ICOADS product provides SST values for earlier years, ICOADS does not provide accurate nearshore temperatures. For 1981 to 2003, we used the Pathfinder Version 5.2 product on a 0.0417 degree grid. These data were developed by the Group for High Resolution Sea Surface Temperature (GHRSST) and served by the US National Oceanographic Data Center.  For 2004 to 2016, we used the NOAA CoastWatch SST products derived from NOAA's Polar Operational Environmental Satellites (POES). 
 
 For chlorophyll-a, we used the chlorophyll-a products developed by the Ocean Biology Processing Group in the Ocean Ecology Laboratory at the NASA Goddard Space Flight Center. For 1997 to 2002, we used the chlorophyll-a 2014.0 Reprocessing (R2014.0) product from the Sea-viewing Wide Field-of-view Sensor (SeaWiFS) on the Orbview-2 satellite. These data are on a 0.1 degree grid.  For 2003 to 2017, we used the MODIS-Aqua product on a 0.05 degree grid. These CHL data are taken from measurements by the Moderate Resolution Imaging Spectroradiometer (MODIS) on NASA's Aqua Spacecraft.  The SST and CHL data were averaged across thirteen 1 degree by 1 degree boxes which roughly parallel the bathymetry (Figure `r ref("fig:studyarea")`).  The SST and CHL satellite data were retrieved from the NOAA ERDDAP server [@Simons2017].  
 
@@ -90,7 +90,7 @@ For an index of coastal upwelling, we used the sea-surface temperature different
 
 Precipitation data were obtained from two different sources.  The first was an estimate of the monthly precipitation (in mm) over Kerala from land-based rain gauges [@KothawaleRajeevan2017]; these data are available from the Indian Institute of Tropical Meteorology and the data are available from the start of our landing data (1956). The second was a remote sensing precipitation product from the NOAA Global Precipitation Climatology Project [@Adleretal2016].  This provides estimate of precipitation over the ocean using a global 2.5 degree grid.  We used the 2.5 by 2.5 degree box defined by latitude 8.75 to 11.25 and longitude 73.25 to 75.75 for the precipitation off the coast of Kerala.   These data are available from 1979 forward [@NCEI2017]. The land and nearshore ocean precipitation data are highly correlated (Appendix E), supporting the use of the land time series as a proxy for the precipitation over the ocean off the Kerala coast.
 
-The Oceanic Niño Index (ONI) is a measure of the SST anomaly in the east-central Pacific and is a standard index of the El niño/Southern Oscillation (ENSO) cycle. The ONI index is 3-month running mean of ERSST.v5 SST anomalies in the Niño 3.4 region, based on centered 30-year base periods updated every 5 years.  The ONI was downloaded from the NOAA National Weather Service Climate Prediction Center.
+The Oceanic Niño Index (ONI) is a measure of the SST anomaly in the east-central Pacific and is a standard index of the El Niño/Southern Oscillation (ENSO) cycle. The ONI index is 3-month running mean of ERSST.v5 SST anomalies in the Niño 3.4 region, based on centered 30-year base periods updated every 5 years.  The ONI was downloaded from the NOAA National Weather Service Climate Prediction Center.
 
 
 ## Hypotheses
@@ -170,9 +170,9 @@ The results on model structure were similar for models of the post-monsoon landi
 
 ## Environmental covariates as explanatory variables
 
-There was no support for using precipitation during the summer monsoon (June-July) or pre-monsoon period (April-May) as an explanatory variable  for the quarter 3 (July-September) or post-monsoon (October-March) catch (hypothses S1 and S2; Tables `r ref("tabappB:spawner-model-precip", pre="B")` and `r ref("tabappB:nonspawner-model-precip", pre="B")`).  This was the case whether precipitation in the current or previous season was used, if precipitation was included as non-linear or non-linear effect, or if the smoothing term (degree of non-linearity allowed) was estimated and thus not constrained, and if either precipitation during monsoon (June-July) or pre-monsoon (April-May) were used as the covariate. Quarter 3 overlaps with the spawning period and precipitation is often thought to trigger spawning, however we were unable to find any consistent association of catch during these spawning and early-post spawning months with precipitation. We also found no correlation between post-monsoon SST in the prior year (hypthesis L1) or the ONI index (hypothesis A2) for either July-September or post-monsoon catch (Tables `r ref("tabappB:spawner-model-precip", pre="B")` and `r ref("tabappB:nonspawner-model-precip", pre="B")`).
+There was no support for using precipitation during the summer monsoon (June-July) or pre-monsoon period (April-May) as an explanatory variable  for the quarter 3 (July-September) or post-monsoon (October-March) catch (hypotheses S1 and S2; Tables `r ref("tabappB:spawner-model-precip", pre="B")` and `r ref("tabappB:nonspawner-model-precip", pre="B")`).  This was the case whether precipitation in the current or previous season was used, if precipitation was included as non-linear or non-linear effect, or if the smoothing term (degree of non-linearity allowed) was estimated and thus not constrained, and if either precipitation during monsoon (June-July) or pre-monsoon (April-May) were used as the covariate. Quarter 3 overlaps with the spawning period and precipitation is often thought to trigger spawning, however we were unable to find any consistent association of catch during these spawning and early-post spawning months with precipitation. We also found no correlation between post-monsoon SST in the prior year (hypothesis L1) or the ONI index (hypothesis A2) for either July-September or post-monsoon catch (Tables `r ref("tabappB:spawner-model-precip", pre="B")` and `r ref("tabappB:nonspawner-model-precip", pre="B")`).
 
-However, we found significant correlation between the summer monsoon upwelling indices in the current season: average nearshore SST along the Kerala coast during June-September and the average SST nearshore versus offshore differential (UPW) off Kochi in June-September (Table `r ref("tab:covariate-models")`, Table `r ref("tabappB:spawner-model-sst", pre="B")` and Table `r ref("tabappB:nonspawner-model-sst", pre="B")`). These two upwelling indices are correlated but not idential. The model with average June-September nearshore SST was more supported than the model using the SST differential off Kochi. For July-September catch, this model with a non-linear response had an adjusted $R^2$ of 41.0 versus an adjusted $R^2$ of 24.4 for the model with no covariates (Table `r ref("tabappB:spawner-model-sst", pre="B")`), and for October-March catch, the adjusted $R^2$ was 61.8 versus 56.6 (Table `r ref("tabappB:nonspawner-model-sst", pre="B")`). Note, that this covariate is June-September in the current season overlaps with the July-September catch. Thus this model cannot be used to forecast July-September catch but does help us understand what factors may be influencing catch during the monsoon.
+However, we found significant correlation between the summer monsoon upwelling indices in the current season: average nearshore SST along the Kerala coast during June-September and the average SST nearshore versus offshore differential (UPW) off Kochi in June-September (Table `r ref("tab:covariate-models")`, Table `r ref("tabappB:spawner-model-sst", pre="B")` and Table `r ref("tabappB:nonspawner-model-sst", pre="B")`). These two upwelling indices are correlated but not identical. The model with average June-September nearshore SST was more supported than the model using the SST differential off Kochi. For July-September catch, this model with a non-linear response had an adjusted $R^2$ of 41.0 versus an adjusted $R^2$ of 24.4 for the model with no covariates (Table `r ref("tabappB:spawner-model-sst", pre="B")`), and for October-March catch, the adjusted $R^2$ was 61.8 versus 56.6 (Table `r ref("tabappB:nonspawner-model-sst", pre="B")`). Note, that this covariate is June-September in the current season overlaps with the July-September catch. Thus this model cannot be used to forecast July-September catch but does help us understand what factors may be influencing catch during the monsoon.
 
 The sea-surface temperature before spawning (March-May) has been speculated to be correlated with successful egg development and spawning behavior (hypothesis S4 and S5) and extreme heat events pre-spawning have been associated with low recruitment. This suggests that March-May in the current and prior years should be associated with low catch. The sea-surface temperature during larval and early juvenile development (October-December) affects survival and growth in multiple ways and thus could correlated with biomass in future years (hypothesis L1). There was no support for either of these variates as explanatory variables for the July-September catch and only weak support (based on AIC) for March-May SST in the current season for explaining variability in post-monsoon catch. The fall average SST in the prior season did not explain variability in either July-September or October-March catch. See  Tables `r ref("tabappB:spawner-model-sst", pre="B")` and `r ref("tabappB:nonspawner-model-sst", pre="B")`.
 
@@ -182,19 +182,23 @@ Chlorophyll-a density is speculated to be an important predictor of larval sardi
 
 # Discussion
 
-*I am still trying to decide how to write the discussion. How does this relate to other work on sardines and esp the correlation between SST and landings?*
+Sardines in all the world's ecosystems exhibit large fluctuations in abundance [@Baumgartneretal1992].  These small forage fish are strongly influenced by natural variability in the ocean environment. Upwelling, influenced by both large-scale forces such as regimes shifts and El Niño/Southern Oscillation patterns [@AlheitHagen1997; @Schwartzloseetal1999] and by seasonal wind and current patterns, brings nutrient rich and oxygen rich waters to the surface. This drives the seasonal variability in phytoplankton resources and in turn sardine prey [@Bakunetal2008]. Local variability in temperature, salinity, and oxygen levels have both direct and indirect on sardine reproduction, recruitment and survival [@Checkleyetal2017]. Sardines are also influenced by competition and predation by other species and well-known for their sensitivity to over-fishing which has been linked to many fishery collapses [@Kripaetal2018].
 
-Sardines in all the world's ecosystems exhibit large fluctuations in abundance [@Schwartzloseetal2010; @Baumgartneretal1992].  These small forage fish are strongly influenced by natural variability in upwelling driven by both large-scale forces, i.e. El Nino patterns, and by changes in winds and currents and in addition local conditions of temperature, salinity, and oxygen levels have both direct and indirect on sardine recruitment and survival.
+Many studies on Pacific sardines have looked at the correlation between ocean temperature (SST) and recruitment.  Temperature can have direct effect on larval survival and growth and an indirect effect on food availability.  Studies in the California Current System, have found that SST explains year-to-year variability in Pacific sardine recruitment [@JacobsonMacCall1995; @Checkleyetal2009; @LindegrenCheckley2012; @Checkleyetal2017] and that the average nearshore temperature over multiple seasons is the explanatory variable. Similar to  these studies, we found that the average nearshore SST over multiple seasons was the covariate that explained the most variability in catch both in the monsoon and post-monsoon months. McClatchie et al. [-@McClatchieetal2010] found no SST relationship with SST and Pacific sardine recruitment, however their analysis used a linear relationship while the other studies, and ours, that found a relationship [@JacobsonMacCall1995; @Checkleyetal2017] allowed a non-linear relationship.  Both Jacobson and MacCall (1995) and Checkley et al (2017) found a step-like response function for temperature: below a threshold value the effect of temperature was linear and above the threshold, the effect was flat and at lower temperatures the effect was negative and became positive as temperature increased.  Our analysis found a similar pattern with a negative effect when the 2.5-year average temperature was below $28.35^\circ$C and positive above and with the positive effect leveling off above $28.5^\circ$C (Figure `r ref("fig:cov-effects")`).
 
-Many studies on Pacific sardines have looked at the correlation between sea surface temperature (SST) and recruitment.  Temperature can have direct effect, an indirect effect on food availability or affect survival [@Houde1987].  Studies in the California Current System, have found that SST explains year-to-year variability in Pacific sardine recruitment [@JacobsonMacCall1995; @Checkleyetal2009; @LindegrenCheckley2012; @Checkleyetal2017].  Consistent with these studies, we also found that SST was the covariate that explained variability in catch anomalies (difference between the landing prediction from prior years' catches).  
+There were four outlier years when catch were much lower than expected based on prior catches: 1986, 1991, 1994 and 2013.  The 2.5-year average SST predicted the collapses in 1986 and 1991 (Figure `r ref("fig:fitted")`); the size of the residual with the covariate was much smaller than without the covariate. The largest collapse was in 1994 and the most recent, in our dataset, was 2014. The 2.5-year average SST did not predict the 1994 nor 2013 collapse. There was no change in the size  of the residual with and without the covariate. In fact, none of the covariates we tested changed the size of the model residuals for 1994 nor 2013. The causes of these unusual declines appear either unrelated to the environmental factors we studied. This suggests either that other factors, biological or anthropogenic, drove these declines or that a particular combination of environmental factors led to the declines. It should also be noted that our upwelling indices captured on one aspect of upwelling: the nearshore intensity. Other aspects of upwelling also affect oil sardines, such as the spatial extent both along the coast and off the coast and the timing of the start of upwelling. 
 
-McClatchie et al. [-@McClatchieetal2010] found no SST relationship with SST and Pacific sardine recruitment, however their analysis used a linear relationship while both other studies that found a relationship [@JacobsonMacCall1995; @Checkleyetal2017] allowed a non-linear relationship.  Both Jacobson and MacCall (1995) and Checkley et al (2017) found a step-like response function for temperature, where lower temperatures were poor and had negative effects and then at a threshold value the effect became positive.  Our analysis found a similar step-like effect function. 
+Seasonal productivity in the SE Arabian Sea upwelling is driven the summer monsoon, which causes strong coastal upwelling that moves from the south to the north over the summer. This drives a strong seasonal pattern of zooplankton abundance (Figure `r ref("fig:SSTts")`). Despite the strong connection between sardine recruitment, growth and survival with upwelling, we found no correlation upwelling in the prior season with landings. We did find a correlation between upwelling in the current season with landings in the current season. The biological reasons behind a positive relationship with upwelling are clear. Upwelling drives productivity and higher food resources in the current season leads to higher recruitment and higher numbers of 0-year fish in the landings or may bring sardines into the nearshore to feed where they are exposed to the fishery. However, the explanatory power of the upwelling indices was mainly due to the negative effect of extremely high upwelling (Figure `r ref("fig:cov-effects")`). Extremely high upwelling transports larval sardines offshore and can create regions of low oxygen which sardines avoid.
 
-There were three outlier years when catch were much lower than expected based on prior catches.  For these years, sea surface temperature improved the model fit greatly (Figure `r ref("fig:fitted")`). 
+# Conclusions
 
-Remote sensing satellites can be used to detect changes in ocean physical, biological and chemical properties, such as surface temperature, winds, surface height, surface waves, rainfall and surface salinity, as well as the ecosystem and water quality changes. Using these covariates to improve landing forecasts has the potential to improve fisheries management for small pelagics [@Tommasietal2016]. However, improving forecasts using these covariates is not obvious. We found no improvement in forecasts over a simple model using a non-linear effect of past catch using many of the covariates known to be associated with spawning, growth and survival: precipitation, upwelling indices, and chlorophyll-a.  
+Remote sensing satellites can be used to detect changes in ocean physical, biological and chemical properties, such as surface temperature, winds, surface height, surface waves, rainfall and surface salinity, as well as the ecosystem and water quality changes. Unlike in-situ measurements, environmental measures from remote-sensing can be acquired rapidly and over large regions. However, which environmental covariates will improve forecasts is not obvious from oil-sardine life-history alone. We tested using many of the covariates known or suspected to have a effect on sardine spawning, growth and survival: precipitation, upwelling indices, ocean temperature and chlorophyll-a in various critical months of the sardine life-cycle.  We found that the multi-year average nearshore ocean temperature explained the most variability in the landings. This covariate is not as directly tied to stages of the oil-sardine life-cycle as the other covariates we tested, though it does integrate over multiple influences (upwelling strength and temperature) over multiple years.
 
-Nonetheless, remote sensing derived chlorophyll, SST and SSH estimates have been used to estimate sardine habitat of the west coast of the USA [@Zwolinskietal2011]. In India, satellite measurements of chlorophyll have been used to predict high densities of oil sardines.  This is used a functional tool for producing forecasts for fisherman and has lead to increases in their efficiency (catch per unit effort) (*citation*). The weak performance of our upwelling covariates may be due to the coarse correspondence between the temperature differential and other aspects of upwelling intensity that are critical to oil-sardines---the spatial extent both along the coast and off the coast and the timing of the start of upwelling.
+The temperature of the Western Indian Ocean, of which the Southeast Arabian Sea is a part, has been increasing over the last century at a rate higher than any other tropical ocean [@Roxyetal2014] and the warming has been most extreme during the summer monsoon months. This ocean climate change is affecting oil sardine distributions with significant landings now occurring north of Goa [@Vivekanandanetal2009]. Continued warming is expected to affect the productivity of the region via multiple pathways, including both the direct effects of temperature change on the physiology and behavior of organisms and a multiple of indirect effects [@Moustahfidetal2018]. These indirect effects includes changes to salinity, oxygen concentrations, currents, wind patterns, ocean stratification and upwelling spatial patterns, phenology, and intensity. Incorporating environmental covariates into landings forecasts has the potential to improve fisheries management for small pelagics such as oil sardines in the face of a changing ocean environment [@Tommasietal2016; @Haltuchetal2019]. However, monitoring forecast performance and covariate performance in models will be crucial as a changing ocean environment may also change the association between landings and average sea surface temperature.
+
+<!--
+Nonetheless, remote sensing derived estimates of chlorophyll front locations have been used to predict of sardine density along the western coast of India (*citation*) and this relationship is used to produce spatial forecasts for fisherman (*citation*).  Similarly remote sensing derived chlorophyll and SST measurements have been used to estimate regions of sardine density on the west coast of the USA [@Zwolinskietal2011]. The weak performance of our upwelling covariates may be due to the coarse correspondence between the temperature differential and other aspects of upwelling intensity that are critical to oil-sardines---the spatial extent both along the coast and off the coast and the timing of the start of upwelling.
+-->
 
 
 
@@ -218,44 +222,23 @@ names(catchmeds)=paste("Q",1:4,sep="")
 
 Figure `r ref("fig:catch")`. Quarterly catch data 1956-2014 from Kerala. The catches have a strong seasonal pattern with the highest catches in quarter 4  Note that quarter 3 is July-Sept and that the fishery is closed July 1 to Aug 15, thus the fishery is only open 1.5 months in quarter 3. The mean catch (metric tonnes) in quarters 1 to 4 are `r round(catchmeans["Q1"]/1000,1)`, `r round(catchmeans["Q2"]/1000,1)`, `r round(catchmeans["Q3"]/1000,1)`, and `r round(catchmeans["Q4"]/1000,1)` metric tonnes respectively.
 
-Figure `r ref("fig:cartoon")`.  The sardine life-cycle in the SE Indian Ocean and how it interacts with the fishery. 
+Figure `r ref("fig:cartoon")`.  The sardine life-cycle in the Southeast Arabian Sea and how it interacts with the fishery. 
 
 Figure `r ref("fig:COVts")`.  Remote sensing covariates used in the analysis.  All data are monthly averages over Box 4 in Figure `r ref("fig:studyarea")` on the Kerala coast off of Kochi.  Panel A) Upwelling Index. The upwelling index is the difference between the near-shore sea surface temperature (SST) and the off-shore SST defined as 3 degrees longitude offshore. Panel B) Surface chlorophyll-a (CHL).  The CHL data are only available from 1997 onward.  Panel C) Sea surface temperature constructed from Advanced Very High Resolution Radiometer (AVHRR). Panel D) Average daily rainfall (mm/day) off the Kerala coast.
 
-Figure `r ref("fig:SSTts")`.  Key oil sardine life-history events overlaid on the monthly SST in the near-shore and off-shore and the near-shore CHL.
+Figure `r ref("fig:SSTts")`.  Key oil sardine life-history events overlaid on the monthly sea surface temperature in the nearshore and offshore and the nearshore chlorophyll density.
 
 Figure `r ref("fig:cov-effects")`.  Effects of covariates estimated from the GAM models. Panel A) Effect of the 2.5 year average nearshore SST on catch during the catch during July-September (late spawning and early post-spawning) months.   Panel B) Effect of upwelling (inshore/off-shore SST differential) during June-September in the current season on July-September catch.  The index is the difference between offshore and inshore SST, thus a negative value indicates warmer coastal surface water than off-shore.  Panel C) Effect of the 2.5 year average nearshore SST on catch during the catch during October-March (post-monsoon, age-0, -1, -2 year fish).   Panel D) Effect of upwelling (inshore/off-shore SST differential) during June-September in the current season on October-March catch. Strong upwelling (positive upwelling index) in the larval and juvenile high growth period (Oct-Dec) is associated with higher early survival and larger cohorts of age-0 fish in the catch.
 
 Figure `r ref("fig:fitted")`.  Fitted versus observed catch with models with and without environmental covariates.  Panel A) Fitted versus observed log catch in the spawning months with only non-spawning catch in the previous season as the covariate: $S_t = s(N_{t-1}) + \epsilon_t$. Panel B) Fitted versus observed log catch in July-September with the 2.5-year average nearshore SST added as a covariate to the model in panel A. This model was: $S_t = s(N_{t-1}) + s(V_{t}) + \epsilon_t$. Panel C) Fitted versus observed log catch in the post-monsoon months with only post-monsoon catch in the previous season and July-September catch two seasons prior as the covariates: $N_t = s(N_{t-1}) + s(S_{t-2}) + \epsilon_t$. Panel D) Fitted versus observed log catch in the post-monsoon months with 2.5-year average nearshore SST ($V$) added as covariates. This model was $N_t = s(N_{t-1}) + s(S_{t-2}) + s(V_t) + \epsilon_t$.
 
-```{r, results="asis", echo=FALSE}
-cat("\\clearpage")
-```
-
 ```{r child = 'Tables.Rmd', echo=FALSE}
-```
-
-```{r, results="asis", echo=FALSE}
-cat("\\clearpage")
-```
-
-# Appendices
-
-```{r, results="asis", echo=FALSE}
-cat("\\clearpage")
-```
-
-```{r child = 'Appendices.Rmd', echo=FALSE}
 ```
 
 ```{r, include=FALSE}
 #kableExtra is needed for the hypotheses table but 
 #needs to be after all the other tables. Otherwise it adds lines to them.
 library(kableExtra)
-```
-
-```{r, results="asis", echo=FALSE}
-cat("\\clearpage")
 ```
 
 ```{r child = 'Figures.Rmd', echo=FALSE}
