--- a/Appendices.Rmd
+++ b/Appendices.Rmd
@@ -211,6 +211,11 @@ cat("\\clearpage")
 
 # Appendix F: Chlorophyll-a images in 2016
 
+```{r, results="asis", echo=FALSE}
+cat("\\clearpage")
+```
+
+
 ```{r fig-chl-2016, out.width = "400px", fig.align='center', echo=FALSE, fig.cap=paste("Figure",  ref("fig:CHL")), message=FALSE, warning=FALSE}
 figfile = system.file("docs", "2016 CHL.png", package="SardineForecast")
 knitr::include_graphics(figfile)
