--- a/Table 2.Rmd
+++ b/Table 2.Rmd
@@ -38,7 +38,7 @@ mne = lm(nspawners0 ~ -1 + offset(nspawners1), data=respdat)
 mod="mne"
 aa = summary(get(mod))
 tmp1=data.frame(
-  Model="$ln(N_t)$ = $ln(N_{t-1})$ + $\\epsilon_t$", 
+  Model="$ln(N_t) = ln(N_{t-1}) + \\epsilon_t$", 
   Residual.df=round(aa$df[2],digits=1), 
   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
   Adj.R2="", 
@@ -72,7 +72,7 @@ m2 = gam(nspawners0 ~ nspawners1, data=m0$model)
 i=1; mod=paste("m",i,sep="")
 aa = summary(get(mod))
 tmp1=data.frame(
-  Model="1. $ln(N_t)$ = $\\alpha$ + $\\beta ln(S_{t-1})$ + $\\epsilon_t$", 
+  Model="1. $ln(N_t) = \\alpha + \\beta ln(S_{t-1}) + \\epsilon_t$", 
   Residual.df=round(a[["Resid. Df"]][i],digits=1), 
   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
   Adj.R2=100*round(aa$r.sq, digits=3), 
@@ -85,7 +85,7 @@ seltable=rbind(seltable,tmp1)
 i=2; mod=paste("m",i,sep="")
 aa = summary(get(mod))
 tmp1=data.frame(
-  Model="2. $ln(N_t)$ = $\\alpha$ + $\\beta ln(N_{t-1})$ + $\\epsilon_t$", 
+  Model="2. $ln(N_t) = \\alpha + \\beta ln(N_{t-1}) + \\epsilon_t$", 
   Residual.df=round(a[["Resid. Df"]][i],digits=1), 
   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
   Adj.R2=100*round(aa$r.sq, digits=3), 
@@ -124,7 +124,7 @@ a=anova(m1,m2,m3,m4, test="F")
 i=1; mod=paste("m",i,sep="")
 aa = summary(get(mod))
 tmp1=data.frame(
-  Model="1. $ln(N_t)$ = $\\alpha$ + $\\beta ln(N_{t-1})$ + $\\epsilon_t$", 
+  Model="1. $ln(N_t) = \\alpha + \\beta ln(N_{t-1}) + \\epsilon_t$", 
   Residual.df=round(a[["Resid. Df"]][i],digits=1), 
   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
   Adj.R2=100*round(aa$r.sq, digits=2), 
@@ -136,7 +136,7 @@ seltable=rbind(seltable, tmp1)
 i=2; mod=paste("m",i,sep="")
 aa = summary(get(mod))
 tmp1=data.frame(
-  Model="2. $ln(N_t)$ = $\\alpha$ + $s(ln(N_{t-1}))$ + $\\epsilon_t$", 
+  Model="2. M1 $ln(N_t) = \\alpha + s(ln(N_{t-1})) + \\epsilon_t$", 
   Residual.df=round(a[["Resid. Df"]][i],digits=1), 
   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
   Adj.R2=100*round(aa$r.sq, digits=2), 
@@ -148,7 +148,7 @@ seltable=rbind(seltable,tmp1)
 i=3; mod=paste("m",i,sep="")
 aa = summary(get(mod))
 tmp1=data.frame(
-  Model="3a. $ln(N_t)$ = $\\alpha$ + $s_1(ln(N_{t-1}))$ + $s_2(ln(N_{t-2}))$ + $\\epsilon_t$", 
+  Model="3a. $ln(N_t) = M1 + s_2(ln(N_{t-2}))$", 
   Residual.df=round(a[["Resid. Df"]][i],digits=1), 
   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
   Adj.R2=100*round(aa$r.sq, digits=2), 
@@ -160,7 +160,7 @@ seltable=rbind(seltable,tmp1)
 i=4; mod=paste("m",i,sep="")
 aa = summary(get(mod))
 tmp1=data.frame(
-  Model="3b. $ln(N_t)$ = $\\alpha$ + $s_1(ln(N_{t-1}))$ + $s_2(ln(S_{t-2}))$ + $\\epsilon_t$", 
+  Model="$\\Rightarrow$ 3b. $ln(N_t) = M1 + s_2(ln(S_{t-2}))$", 
   Residual.df=round(a[["Resid. Df"]][i],digits=1), 
   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
   Adj.R2=100*round(aa$r.sq, digits=2), 
@@ -174,7 +174,7 @@ seltable=rbind(seltable,tmp1)
 colnames(seltable)=c("Model", "Residual df", "MASE", "Adj.R2", "F", "p value", "AIC")
 if(isLatex) colnames(seltable)=c("Model", "\\shortstack{Residual\\\\df}", "MASE", "\\shortstack{Adj.\\\\R2}", "F", "\\shortstack{p\\\\value}", "AIC")
 
-thecap=paste("Model selection tests for the post-monsoon (Oct-Mar) catch model ($N_t$) using F-tests and AIC.  $S_t$ is the catch during the monsoon (Jul-Sep). $N_t$ is the catch during the post-monsoon period (Oct-Mar) of season $t$; note the fishing season is defined as Jul-Jun not calendar year. $S_{t-1}$ and $N_{t-1}$ are the catch during the prior sardine season during and after the monsoon respectively. $S_{t-2}$ and $N_{t-2}$ are the same for two seasons prior. ")
+thecap=paste("Model selection tests for the post-monsoon (Oct-Mar) catch model ($N_t$) using F-tests and AIC.  $S_t$ is the catch during the monsoon (Jul-Sep). $N_t$ is the catch during the post-monsoon period (Oct-Mar) of season $t$; note the fishing season is defined as Jul-Jun not calendar year. $S_{t-1}$ and $N_{t-1}$ are the catch during the prior sardine season during and after the monsoon respectively. $S_{t-2}$ and $N_{t-2}$ are the same for two seasons prior. See Table 2 for more details.")
 fullcap=paste("Table ", ref("tab:nonspawner-models"), ". ", thecap, sep="")
 kable(seltable, align="lcccccc", caption=fullcap, escape=FALSE)
 ```
