--- a/todo.txt
+++ b/todo.txt
@@ -5,8 +5,60 @@ Need refs for the cHl section? might already be in intro
 
 test of autocorrelation of residuals and normality
 
+Need to do influence analysis via cross-validation (LOO).  1994 catch is influential and outlier.
+
 cross-validation test of the catch models
 
 Cut the cartoon of sardine life-cycle? Or need to improve the quality of the figure.
 
 fix Rohit 2018 ref in endnote when return to NWFSC
+
+Remove Jr. from Checkley
+
+add
+
+@article{Roxyetal2014},
+  title={The curious case of Indian Ocean warming},
+  author={Roxy, Mathew Koll and Ritika, Kapoor and Terray, Pascal and Masson, S{\'e}bastien},
+  journal={Journal of Climate},
+  volume={27},
+  number={22},
+  pages={8501--8509},
+  year={2014}
+}
+
+@article{SchwartzloseAlheit1999,
+  title={Worldwide large-scale fluctuations of sardine and anchovy populations},
+  author={Schwartzlose, R. A. and J. Alheit, A. Bakun and T. R. Baumgartner and R. Cloete and R. J. M. Crawford and W. J. Fletcher and Y. Green-Ruiz and E. Hagen and T. Kawasaki and D. Lluch-Belda and S. E. Lluch-Cota and A. D. MacCall and Y. Matsuura and M. O. Nevarez-Martinez and R. H. Parrish and C. Roy and R. Serra and K. V. Shust and M. N. Ward and J. Z. Zuzunaga},
+  journal={African Journal of Marine Science},
+  volume={21},
+  pages = {289-347},
+  year={1999},
+  publisher={NISC}
+}
+
+Add
+
+@inbook{Moustahfidetal2018,
+  author = {Hassan Moustahfid and Francis Marsac and Avijit Grangopadhyay},
+  title={Climate change impacts, vulnerabilities and adaptations: Western Indian Ocean marine fisheries},
+  booktitle = {Impacts of climate change on fisheries and aquaculture: synthesis of current knowledge, adaptation and mitigation options},
+  editor={Barange, Manuel and Bahri, Tar{\^u}b and Beveridge, Malcolm C. M. and Cochrane, Kevern L. and Funge-Smith, Simon and Poulain, Florence},
+  publisher = {FAO Fisheries and Aquaculture Technical Paper No. 627},
+  address = {Rome},
+  pages = {251--280},
+   year = {2018},
+   type = {Book Section}
+}
+
+@article{Kripaetal2018,
+  title={Overfishing and climate drives changes in biology and recruitment of the Indian oil sardine Sardinella longiceps in southeastern Arabian Sea},
+  author={Kripa, Vasant and Mohamed, Kolliyil S and Koya, KP and Jeyabaskaran, R and Prema, D and Padua, Shelton and Kuriakose, Somy and Anilkumar, PS and Nair, Preetha G and Ambrose, TV and others},
+  journal={Frontiers in Marine Science},
+  volume={5},
+  pages={443},
+  year={2018},
+  publisher={Frontiers}
+}
+
+Fix {N}in\~{o}
